# repoprod

./: .env.example  .gitignore  CLAUDE.md  README.md  mcp.config.example.json  pyproject.toml
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: mcp-hackathon.md
docs/superpowers/specs/: 2026-03-28-user-profiling-design.md
mirrorchat/: CONTRACTS.md  chat.html  index.html  learn.html  package-lock.json  package.json  server.js  supabase-schema.sql  test_voice.js  vercel.json  voice.html
mirrorchat/css/: styles.css
mirrorchat/js/: anonymizer.js  chat.js  chatApi.js  education.js  examples.js  resources.js  safevoice.js  speech.js  voice.js  voiceApi.js
mirrorchat/pitch/: deck.pptx  script.md
mirrorchat/scripts/: anonymize.py
mirrorchat/src/: App.jsx
mirrorchat/src/components/: Layout.jsx  Layout.module.css  MapViewer.jsx  QuizSession.jsx  QuizSession.module.css  (+5 more)
references/: 01-brand-palette.html  02-landing-page.html  03-chat-analysis.html  04-safevoice-inactive.html  05-safevoice-active.html  06-safevoice-countdown.html  07-education-page.html  08-brand-pattern.html  09-app-showcase.html  10-components-detail.html  11-dark-mode.html
scripts/: sanity_check.py
src/: __init__.py  config.py
src/agent/: __init__.py  runner.py
src/providers/: __init__.py  anthropic_client.py  gemini_client.py  openai_client.py
(+27 files in other folders)
